envoy_workload_1_tmpl.yaml
node:
  cluster: service_greeter
  id: test-id

admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9000


static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 127.0.0.1, port_value: 8080 }
    listener_filters:
    - name: envoy.filters.listener.tls_inspector
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    - name: envoy.filters.listener.http_inspector
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector    
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            virtual_hosts:          
            - name: workload-2_service
              domains: ["workload-2-vm.c.$PROJECT_ID.internal:8080"]
              routes:
              - match: 
                  path: "/get"         
                route:
                  cluster: service_workload_2
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              upstream_http_filters:   
              - name: envoy.filters.http.upstream_codec
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec

  clusters:
  - name: service_workload_2
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: service_workload_2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: workload-2-vm.c.$PROJECT_ID.internal
                port_value: 8080
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: workload-2-vm.c.$PROJECT_ID.internal:8080
        common_tls_context:
          validation_context:
            # trusted_ca:
            #   filename: /var/run/secrets/workload-spiffe-credentials/ca_certificates.pem
            match_typed_subject_alt_names:
            - san_type: URI
              matcher:
                exact: "spiffe://workload-pool-test.global.$PROJECT_NUMBER.workload.id.goog/ns/default-ns/sa/managed-identity-2"
            custom_validator_config:
              name: envoy.tls.cert_validator.spiffe
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.SPIFFECertValidatorConfig
                trust_domains:
                - name: workload-pool-test.global.$PROJECT_NUMBER.workload.id.goog
                  trust_bundle:
                    filename: /var/run/secrets/workload-spiffe-credentials/ca_certificates.pem

          tls_certificates:
            certificate_chain:
              filename: /var/run/secrets/workload-spiffe-credentials/certificates.pem
            private_key:
              filename: /var/run/secrets/workload-spiffe-credentials/private_key.pem
